feat(shopping): add get detail api
